--- a/style.css
+++ b/style.css
@@ -16,34 +16,33 @@ body{
   width: 100%;
   text-align: center;
   position: relative;
-  top: 40%;
-  transform: translateY(-60%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .text2 {
   width: 100%;
   text-align: center;
   position: relative;
-  top: 37%;
-  transform: translateY(-53%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-#amperand {
+#amp {
   width: 100%;
   text-align: center;
   position: relative;
-  top: 40%;
-  transform: translateY(-60%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 span{
-  font-size: calc(1em + 7vw);
   padding: 0 calc(0.5rem + 0.5vw);
   position: relative;
   opacity: 0;
 }
 
-span:not(#exclamtion){
+span:not(#exclamtion,#w,#amp){
   bottom: -200px;
   opacity: 0;
   animation-name: appear;
@@ -54,22 +53,16 @@ span:not(#exclamtion){
 }
 
 span:nth-of-type(2) {
-  animation-delay: 0.3s;
+  animation-delay: 0.2s;
 }
 span:nth-of-type(3) {
-  animation-delay: 0.6s;
+  animation-delay: 0.4s;
 }
 span:nth-of-type(4) {
-  animation-delay: 0.9s;
+  animation-delay: 0.6s;
 }
 span:nth-of-type(5) {
-  animation-delay: 1.2s;
-}
-span:nth-of-type(6) {
-  animation-delay: 1.4s;
-}
-span:nth-of-type(7) {
-  animation-delay: 1.6s;
+  animation-delay: 1s;
 }
 
 @keyframes appear {
@@ -86,13 +79,34 @@ span:nth-of-type(7) {
 
 #exclamtion {
 bottom: 100px;
-font-size: calc(9em + 9vw);
+font-size: calc( em +  vw);
 animation-name: exclamtion;
 animation-duration: 1.5s;
 animation-timing-function: ease-in;
 animation-fill-mode: forwards;
-animation-delay: 4s;
+animation-delay: 6s;
 }
+
+#w {
+  bottom: 100px;
+  font-size: calc( em +  vw);
+  animation-name: exclamtion;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  animation-delay: 5.5s;
+  }
+  
+  #amp {
+    bottom: 100px;
+    font-size: calc( em +  vw);
+    animation-name: exclamtion;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+    animation-delay: 4.5s;
+    }
+    
 
 @keyframes exclamtion {
 0%{
@@ -114,3 +128,20 @@ animation-delay: 4s;
   bottom: 0;
 }
 }
+@media (max-width:2000px)
+{span {font-size: 90px;}}
+
+@media (max-width:1200px)
+{span {font-size: 75px;}}
+
+@media (max-width:992px)
+{span {font-size: 40px;}}
+
+@media (max-width:480px)
+{span {font-size: 26px;}}
+
+@media (max-width:370px)
+{span {font-size: 14px;}}
+
+@media (max-width:260px)
+{span {font-size: 10px;}}
