--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(90deg,rgb(242, 181, 67),rgb(199, 144, 4));
+  background-image: linear-gradient(90deg,rgba(244, 104, 104, 0.697),rgb(111, 143, 214));
   background-color: rgb(199, 144, 4);
   color: azure;
 }
